# OCR-UI

./: .gitignore  CMakeLists.txt  Main.qml  backend.cpp  backend.h  cameraCapture.cpp  cameraCapture.h  imageProvider.cpp  imageProvider.h  log_20250708_141001.txt  main.cpp
